--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -1,20 +1,41 @@
-- name : Configure Docker on EC2 Instances
-  hosts : all
+- name: Configure Kubernetes Worker Node
+  hosts: worker_nodes
   become: true
-  connection : ssh
-  tasks : 
-  - name: updating apt
-    command : sudo apt-get update
+  connection: ssh
 
-  - name : Install Docker
-    command : sudo apt-get install -y docker.io
-    become : yes
-    become_user : root
+  tasks:
+    - name: Update apt package index
+      apt:
+        update_cache: yes
 
-  - name : Start Docker Service
-    command : sudo systemctl start docker
-    become : yes
-    become_user : root
+    - name: Install Docker
+      apt:
+        name: docker.io
+        state: present
 
-  - name: Deploy Docker Container
-    command: docker run -itd -p 8084:8082 shubhamkushwah123/medicure:1.0
+    - name: Start and enable Docker service
+      service:
+        name: docker
+        state: started
+        enabled: yes
+
+    - name: Install Kubernetes components
+      apt:
+        name:
+          - kubelet
+          - kubeadm
+          - kubectl
+        state: present
+
+    - name: Disable swap
+      command: swapoff -a
+
+    - name: Reset kubeadm (if needed)
+      command: kubeadm reset -f
+      ignore_errors: yes
+
+    - name: Join Worker Node to Cluster
+      command: "{{ kubeadm_join_command }}"
+      args:
+        creates: /etc/kubernetes/kubelet.conf
+
