--- a/deploy-app.yml
+++ b/deploy-app.yml
@@ -1,9 +1,6 @@
-- name: Deploy Banking App
+- name: Deploy Application on Kubernetes
   hosts: master
-  become: yes
+  become: true
   tasks:
-    - name: Deploy Application
-      shell: kubectl create deployment banking-app --image=cbabu85/bankingfinance:3.0
-
-    - name: Expose App
-      shell: kubectl expose deployment banking-app --type=NodePort --port=8081
+    - name: Apply Kubernetes Deployment
+      command: kubectl apply -f /home/ubuntu/deployment.yaml
