--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,3 +17,19 @@ spec:
           image: nginx
           ports:
             - containerPort: 80
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: my-app-service
+spec:
+  type: NodePort  # Expose service as NodePort
+  selector:
+    app: my-app
+  ports:
+    - protocol: TCP
+      port: 80       # Internal Cluster Port
+      targetPort: 80  # Container Port
+      nodePort: 30008 # Exposed on Worker Node
+
