--- a/ansible_login.yml
+++ b/ansible_login.yml
@@ -4,12 +4,12 @@
   tasks:
     - name: Create Ansible User
       user:
-        name: devops
+        name: ubuntu
         shell: /bin/bash
         groups: sudo
 
     - name: Copy SSH Key for Ansible User
       authorized_key:
-        user: devops
+        user: ubuntu
         key: "{{ lookup('file', '/home/ubuntu/.ssh/id_rsa.pub') }}"
         state: present
